Correctly align and display code space

--- a/src/com/sensia/tools/public/css/renderer/viewer.css
+++ b/src/com/sensia/tools/public/css/renderer/viewer.css
@@ -31,6 +31,6 @@
     margin-bottom: 10px;
 }
 
-.viewer .panel-abstract-generic-line .before {
+.viewer .generic-line-panel > .before {
   min-width: 370px;
 }
